--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,3 +6,8 @@ data_ingestion:
   source_URL: https://drive.google.com/file/d/1poPH6O8LWq7I5Aw0i6XUBSgXEl_AWvzw/view?usp=sharing
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
+
+prepare_base_model:
+  root_dir: artifacts/prepare_base_model
+  base_model_path: artifacts/prepare_base_model/base_model.keras
+  updated_base_model_path: artifacts/prepare_base_model/base_model_updated.keras
