--- a/dvc.yaml
+++ b/dvc.yaml
@@ -35,3 +35,17 @@ stages:
       - AUGMENTATION
     outs:
       - artifacts/training/model.keras
+
+  evaluation:
+    cmd: python src/cnnGenderClassifier/pipeline/stage_04_model_evaluation.py
+    deps:
+      - src/cnnGenderClassifier/pipeline/stage_04_model_evaluation.py
+      - config/config.yaml
+      - artifacts/data_ingestion/Gender
+      - artifacts/training/model.keras
+    params:
+      - IMAGE_SIZE
+      - BATCH_SIZE
+    metrics:
+      - scores.json:
+          cache: false
